[package]
name = "network-tester"
version = "0.1.0"
authors = ["lamafab <42901763+lamafab@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
futures = "0.1.29"
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", branch = "master" }
tokio = "0.1.22"

[[bin]]
name = "network-tester"
path = "src/bin/network_tester.rs"